# paloma-rs

./: Cargo.toml
claims/signed_claims/: Cargo.toml
claims/signed_claims/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
claims/signed_claims/src/: contract.rs  msg.rs
claims/simple_claims/: Cargo.toml
claims/simple_claims/schema/: execute_msg.json  instantiate_msg.json
claims/simple_claims/src/: msg.rs
compass/compass-cw/: Cargo.toml
compass/compass-cw/schema/: execute_msg.json  instantiate_msg.json
compass/compass-cw/src/: msg.rs
compass/trampoline/: Cargo.toml
compass/trampoline/examples/: trampoline_schema.rs
compass/trampoline/schema/: execute_msg.json  instantiate_msg.json
compass/trampoline/src/: contract.rs  msg.rs
contracts/order-storage/: Cargo.toml
contracts/order-storage/examples/: order_storage_schema.rs
contracts/order-storage/schema/: instantiate_msg.json
contracts/order-storage/src/: contract.rs  msg.rs  state.rs
egg/mint/: Cargo.toml
egg/mint/schema/: execute_msg.json  instantiate_msg.json
egg/mint/src/: contract.rs  msg.rs  tests.rs
