[workspace]
resolver = "2"
members = [
    "claims/*",
    "compass/*",
    "egg/*",
    "packages/*",
]

[workspace.dependencies]
cosmwasm-schema = "1.0.0"
cosmwasm-std = { version = "1.2.1", features = ["abort"] }
cw-storage-plus = "1.0.1"
eyre = "0.6.8"
getrandom = { version = "0.2.7", default-features = false, features = ["custom", "js"] }
hex = "0.4.3"
itertools = "0.10.5"
k256 = { version = "0.13.0" }
protobuf = { version = "2.28.0", features = ["with-bytes"] }
rand = "0.8.5"
ring = "0.16.20"
secp256k1 = "0.27.0"
serde_json = "1.0.85"
xcci = { path = "packages/xcci" }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
