[package]
name = "trampoline"
version = "0.1.0"
edition = "2021"
description = "A realized ultimate reality foreign chain contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
eyre.workspace = true
xcci.workspace = true
